# config

./: .env  .env.example  .gitignore  AGENTS.md  Brewfile  Brewfile.lock.json  Brewfile.optional  Cargo.txt  Makefile  README.md  alacritty.yml  ch57x-fn-keys.xml  ch57x-fn-keys.yaml  ch57x-mpv.yaml  global.toml  kitty.conf  link-ranger-mac.sh  link-ranger.sh  local.toml  neovim.lua  nixos.toml  out  output.tpl  python-deps.txt  repositories.txt  root.toml  skhd.conf  startup.txt  sway.conf  workspace.txt  workspaces.txt  zshrc.conf  zshrc.zsh
.SpaceVim.d/: tasks.toml
.dotter/: dev.toml  global.toml  macos.toml.example  nixos.toml.example  remote.toml
alacritty/: alacritty.old.toml  alacritty.toml  alacritty.yml  popup.yml
apps/: fzfmenu
bash/: .bashrc  out.txt  rc.bash
broot/: conf.hjson
delta/: gitconfig
docs/: STRUCTURE.md  (+1 more)
neovim/templates/rust/: Cargo.toml  read_bytes.rs
neovim/templates/rust/patterns/: builder.rs
utils/leaf/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TESTING.md  UPSTREAM.md  config.toml  gruvbox.toml
utils/leaf/.github/workflows/: ci-check.yml  contrib-refresh.yml  npm-publish.yml  release-build.yml  release-cut.yml
utils/leaf/completions/: leaf.bash  leaf.fish  leaf.ps1  leaf.zsh
utils/leaf/demo/: README.md  README_FR.md
utils/leaf/demo/sources/: demo-code-syntax.md  demo-file-picker.md  demo-latex-render.md  demo-mermaid-render.md  demo-navigation.md  demo-open-editor.md  demo-search.md  demo-table-render.md  demo-theme-picker.md  demo-toc-sidebar.md  demo-watch-mode.md
utils/leaf/npm/: package.json
utils/leaf/npm/scripts/: publish.sh
utils/leaf/scripts/: changelog-update.sh  install.ps1  install.sh  release-cut.sh
utils/leaf/src/: cli.rs  clipboard.rs  completions.rs  config.rs  editor.rs  inline.rs  main.rs  terminal.rs  update.rs
utils/leaf/src/app/: content.rs  file_picker.rs  flash.rs  fuzzy.rs  io_picker.rs  links.rs  mod.rs  navigation.rs  popups.rs  search.rs  theme_picker.rs
utils/leaf/src/markdown/: blocks.rs  fences.rs  frontmatter.rs  highlight.rs  latex.rs  links.rs  lists.rs  markers.rs  mermaid.rs  mod.rs  spans.rs  syntax.rs  table_layout.rs  tables.rs  toc.rs  width.rs  wrapping.rs
utils/leaf/src/render/: content.rs  mod.rs  popup.rs  popup_picker.rs  status.rs  toc.rs
utils/leaf/src/runtime/: keyboard.rs  mod.rs  mouse.rs
utils/leaf/src/tests/: app.rs  completions.rs  config.rs  editor.rs  file_fuzzy.rs  file_picker.rs  inline.rs  markdown_blocks.rs  markdown_embedded.rs  markdown_links.rs  markdown_lists.rs  markdown_tables.rs  mod.rs  render.rs  theme.rs  toc.rs  update.rs
utils/leaf/src/theme/: mod.rs  presets.rs  resolution.rs  serde.rs
utils/motherfucker/: Cargo.toml  DESIGN.md  README.md
utils/motherfucker/assets/: genicon.swift
utils/motherfucker/src/: apps.rs  config.rs  hotkey.rs  main.rs  modes.rs  stats.rs
(+1378 files in other folders)
