[package]
name = "leaf"
version = "1.23.1"
edition = "2021"
description = "A friendly terminal Markdown previewer"
license = "MIT"

[[bin]]
name = "leaf"
path = "src/main.rs"

[dependencies]
ratatui       = "0.30"
crossterm     = "0.29"
pulldown-cmark = "0.12"
syntect       = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
anyhow        = "1.0"
unicode-width = "0.2"
reqwest       = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde         = { version = "1.0", features = ["derive"] }
semver        = "1.0"
sha2          = "0.10"
toml          = "0.8"
unicodeit     = "0.2"
mmdflux       = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
crossterm     = { version = "0.29", features = ["use-dev-tty"] }
