[package]
name = "fm-tui"
version = "0.1.1"
authors = ["Quentin Konieczko <qu3nt1n@gmail.com>"]
edition = "2021"
license-file = "LICENSE.txt"
description = "A TUI file manager inspired by dired and ranger"
readme = "readme.md"
repository = "https://github.com/qkzk/fm"
keywords = ["tui", "file-manager", "file", "manager", "tuikit"]
categories = ["command-line-utilities", "filesystem", "os::unix-apis"]
documentation = "https://docs.serde.rs/fm-tui/"

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true   # instructs the linker to optimize at the link stage.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "fm"
path = "src/main.rs"

[lib]
name = "fm"
path = "src/lib.rs"
